# Lumino

./: .clang-format  .gitignore  .gitmodules  .textlintrc  CMakeLists.txt  ImportLumino.cmake  LICENSE  LuminoBuild.sln  README.md  Readme.html  Source - ショートカット.lnk  azure-pipelines.yml  bootstrap.bat  build.cake  build.csproj  build.ps1  build.py  build.sh  build_msvc.bat  index.html  manifest.json  toc.html
Bindings/Runtime/: CMakeLists.txt
Bindings/Runtime/include/: Common.h
Bindings/Runtime/src/: BindingManager.cpp  BindingManager.h  CSStructs.generated.cs  Internal.h  InternalAPI.cpp  Lumino.FlatC.generated.cpp  Lumino.FlatC.generated.h  Lumino.Wrapper.generated.h  LuminoC.generated.h  WrapperIF.generated.cpp  WrapperIF.generated.h
Lumino010/: CMakeLists.txt  LICENSE
Lumino010/docs/: CodingGuideline.md  Roadmap.md
Lumino010/docs/Doxygen/: build_doc.bat
Lumino010/docs/Gallery/: 33-scene.jfif  34-scene.jfif
Lumino010/examples/: Example.PCH.cpp  Main.cpp
Lumino010/examples/Assets/: Particle.yml
Lumino010/examples/Basic/: 0-Hello.cpp  x-ObjectClass.cpp
Lumino010/examples/Features/: Sprite.cpp
Lumino010/src/: LuminoBuildCommon.cmake  LuminoCommon.cmake  LuminoConfig.cmake  LuminoSetup.cmake  Readme.md
Lumino010/src/Core/: CMakeLists.txt  LuminoCoreSources.cmake
Lumino010/tools/Editor/: CMakeLists.txt
Lumino010/tools/EngineResources/: README.md
Lumino010/tools/LuminoBuild/: EmscriptenBuildEnv.cs
Lumino010/tools/LuminoStudio/: DocumentManager.h  LuminoWidget.cpp  MainWindow.h  PCH.cpp
Lumino010/tools/PackageSource/: Readme.txt.template
Lumino010/tools/VLGothic/: LICENSE
Lumino010/tools/VisualStudio/: Lumino.natvis  lngetset.snippet
Lumino010/tools/VulkanTest/: CMakeLists.txt
Lumino010/tools/lumino-wg/: OutputBuffer.cpp  SymbolDatabase.hpp
Samples/: CMakeLists.txt  DebugAndTestSupport.cpp  HelloWorld.cpp  SampleBrowser.PCH.cpp  SampleBrowser.PCH.h  SampleBrowser.cpp  Sample_Basic_HelloWorld.cpp  Sample_DebugAndTestSupport.cpp  Sample_Graphics2D_Sprite2D.cpp  Sample_HelloWorld.cpp  Sample_Input_VirtualController.cpp  Sample_Lumino_Basic.cpp  Sample_Sprite2D.cpp  Sample_Support_DebugAndTestSupport.cpp  Sprite2D.cpp
Samples/DxLib/: CMakeLists.txt
Samples/LiveExplorer/Core/: Demo_Core_String.cpp
Samples/Media/: Sun1.efk  TestShader1.fx
Source/Fluorite/: CMakeLists.txt
Source/Fluorite/Source/: Common.md  Note.md  Note.txt
Source/Fluorite/Test/: CMakeLists.txt  Main.cpp  TestConfig.h  Test_CppLexer.cpp  Test_ParserCombinators.cpp  Test_Parser_CppLexer.cpp  Test_Parser_Preprocessor.cpp  Test_Parser_RpnEvaluator.cpp  Test_Parser_RpnParser.cpp  Test_Rpn.cpp
Source/LuminoCore/: .gitignore  CMakeLists.txt
Source/LuminoCore/CMake/: LNCommon.cmake
Source/LuminoCore/Documentation/: build_doc.bat
Source/LuminoCore/Include/: LuminoCore.h  LuminoMath.h
Source/LuminoCore/Source/: Internal.h  LuminoCore.PCH.cpp  LuminoCore.PCH.h
Source/LuminoCore/Test/: CMakeLists.txt
Source/LuminoEngine/: CMakeLists.txt
Source/LuminoEngine/Include/: Lumino.h  LuminoDxLib.h  LuminoEngine.h  LuminoScene.h
Source/LuminoEngine/Source/: AssetsManager.cpp  AssetsManager.h  DllMain.cpp  Engine.cpp  EngineDiagCore.cpp  EngineDiagCore.h  EngineDiagViewer.h  EngineDomain.h  EngineManager.cpp  EngineManager.h  GameTime.cpp  Internal.h  LuminoEngine.PCH.h  Profiler.cpp  Property.cpp  Resource.cpp  Resource.h  Version.cpp  World.cpp
Source/LuminoEngine/Test/: CMakeLists.txt
Source/LuminoExperimental/: CMakeLists.txt
Source/LuminoExperimental/Include/: LuminoExperimental.h
Source/LuminoExperimental/Source/: LuminoExperimental.PCH.cpp  LuminoExperimental.PCH.h
Source/LuminoLaunch/: CMakeLists.txt
Source/LuminoLaunch/Source/: EntryPoint.cpp  EntryPoint.h  LuminoLaunch.PCH.cpp  LuminoLaunch.PCH.h  Main_Win32.cpp
Source/LuminoRuntime/: CMakeLists.txt
Source/LuminoRuntime/Include/: Common.h
Source/LuminoRuntime/Source/: BindingManager.cpp  Internal.h  InternalAPI.cpp  Lumino.FlatC.generated.cpp  Lumino.Wrapper.generated.h
Tools/LWIG/: CMakeLists.txt  Common.h  Diagnostics.cpp  Diagnostics.h  Generator.h  Include.h  LWIG.PCH.h  Main.cpp  OutputBuffer.cpp  OutputBuffer.h  Parser.cpp  Parser.h  SymbolDatabase.cpp  SymbolDatabase.h  Test.cpp
Tools/LWIG/DotNet/: CSClassLibGenerator.cpp  CSClassLibGenerator.h  CSCommon.cpp  CSCommon.h  CSStructsGenerator.cpp  CSStructsGenerator.h  DotNetClassLibGenerator.cpp  DotNetCommon.cpp  DotNetCommon.h  DotNetPInvokeLibGenerator.cpp
Tools/LWIG/Templates/: CSStructs.template.cs
Tools/LWIG/doc/: ImportRule.md
bindings/C_API/: CMakeLists.txt
bindings/LightNote/: CMakeLists.txt
bindings/Runtime/: CMakeLists.txt
bindings/src/: CMakeLists.txt
bindings_/C_API/: CMakeLists.txt
demo/: CMakeLists.txt  Common.h  Main.cpp
demo/Core/: Demo_Core_String.cpp
demo/DxLib/: CMakeLists.txt  Main.cpp
demo/LiveExplorer/: CMakeLists.txt  Common.h  Main.cpp
demo/Media/: Sun1.efkproj  TestShader1.fx
examples/: CMakeLists.txt  Example.PCH.hpp  LuminoExample.hpp  Main.cpp  README.md  Tutorial_Sandbox.cpp  pre.js
examples/Assets/: SkinnedMesh1.blend  picture1.tga
examples/Basic/: 1-Graphics.cpp  2-Entity.cpp  2-Graphics-1.cpp  2-Graphics-1.rb  lumino.ini  x-ObjectClass.hsp
examples/Example-WebLibrary/: CMakeLists.txt  PCH.h  shell_minimal.html
examples/Experimental/: CMakeLists.txt  Main.cpp
examples/Features/: GeometricShapes.cpp  ShapeEntity.cpp
examples/FromVcpkg/: CMakeLists.txt  Main.cpp  README.md
examples/Obsolete/: Example_SoundControl.cpp  Example_Sprite.cpp  Experiment_SSR.cpp  SandboxMain.cpp  Sandbox_UIShader.cpp
examples/src/: Main.cpp
lumino/Bitmap/: CMakeLists.txt
lumino/Engine/: CMakeLists.txt
lumino/FFI/: CMakeLists.txt
lumino/Font/: CMakeLists.txt
lumino/Graphics/: CMakeLists.txt
lumino/GraphicsRHI/: CMakeLists.txt
lumino/LuminoCore/: CMakeLists.txt  LuminoCoreSources.cmake
lumino/LuminoEngine/: CMakeLists.txt
lumino/LuminoRuntime/: CMakeLists.txt
test/: CMakeLists.txt
test/Sandbox/: Main.cpp  SandboxMain.cpp
test/UnitTest/: Main.cpp  Test.cpp  TestConfig.h
(+8248 files in other folders)
